--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,16 +26,5 @@ jobs:
     - name: Build with Maven
       working-directory: ${{ matrix.dir }}
       run: mvn -B package --file pom.xml
-  test:
-    name: Unit Test
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Maven Verify
-        working-directory: agent-app
-        run: mvn -B clean verify -Dspring.profiles.active=test
+    - name: Test with Maven
+      run: mvn -B test --file pom.xml
