[AA-06] Test working path fixed

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,4 +27,5 @@ jobs:
       working-directory: ${{ matrix.dir }}
       run: mvn -B package --file pom.xml
     - name: Test with Maven
+      working-directory: ${{ matrix.dir }}
       run: mvn -B test --file pom.xml
