[AA-06] Unit tests added to CI (#12)
* [AA-06] Unit tests added to CI

* [AA-06

* [AA-06] Tests fixed

* [AA-06] Test working path fixed

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,6 @@ jobs:
     - name: Build with Maven
       working-directory: ${{ matrix.dir }}
       run: mvn -B package --file pom.xml
+    - name: Test with Maven
+      working-directory: ${{ matrix.dir }}
+      run: mvn -B test --file pom.xml
